# outreach-agent

./: .gitignore  CLAUDE.md  app.py  company_details_extractor.py  debug_apify.py  email_extractor.py  industry_id.csv  main.py  notes.txt  pyproject.toml  requirements.txt  sample_scraper.py  scraper.py
core/: models.py  sheets.py
data/: FLOW.tldr  company_url.csv  copy_company_data.csv
outreach/: email_sender.py  sequence_manager.py
outreach/templates/: cold_email.txt
scraper/: company_details_extractor.py
