[project]
name = "outreach-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.5.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "google-auth>=2.49.0",
    "gspread>=6.2.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
